Fri Apr  9 12:33:16 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/driver/drv_args.cpp:
        
          Added usage message for the option to generate debug file/line#
          info for implementation classes. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for pointing out the oversight.

Fri Apr  9 12:28:48 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.ll (idl_store_pragma):
        * TAO_IDL/fe/lex.yy.cpp (idl_store_pragma):

          Moved the check for the repo id having been
          already set with 'typeid' earlier, before the
          call to replace the repo id itself. The previous logic,
          coupled with the recent change to compute repository
          IDs in the IDL compiler eagerly, led to bogus errors
          when a #pragma ID directive is encountered in an IDL
          file. Thanks to Mehrdad Nazari <mehrdad.nazari@excite.com>
          for reporting the bug.

        * TAO_IDL/include/utl_err.h (id_reset_error):
        * TAO_IDL/util/utl_err.cpp (id_reset_error):

          Change the two char* parameters of this method
          to have the 'const' qualifier.

        * TAO_IDL/ast/ast_decl.cpp:

          Changed the logic of the repo id set method to
          reflect the changes above in lex.yy.cpp.

        * TAO_IDL/tao_idl.mpc:

          Commented out occurrences of 

             optimize = <nothing>

          There are comments that this doesn't work on Windows,
          but the line itself was left uncommented. The comment
          is correct, the line does indeed break project generation
          on Windows.

        * TAO_IDL/be/be_visitor_enum/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/field_cdr_cs.cpp:
        * TAO_IDL/be_include/be_visitor_enum/cdr_op_cs.h:
        * TAO_IDL/be_include/be_visitor_valuetype/field_cdr_cs.h:

          New files, renamed from the corresponding *_ci.* versions,
          which were removed from the repository.
