@@ -1,3 +1,9 @@
+Fri Apr  9 23:25:04 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* TAO_IDL/be/be_visitor_field/cdr_op_cs.cpp:
+
+	  Fixed unused variable warning.
+
 Fri Apr  9 12:33:16 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/driver/drv_args.cpp:
